[FIX] spreadsheet,spreadsheet_dashboard: fix mobile dashboard panel
The control panel of a dashboard (search bar + navigation buttons)
was really ugly on mobile. This commit fixes most issues:

- the global fitler values dropdown is now correctly rendered
- there is now a button to hide/show the navbar
- the layout of the share/search bar/date filter is now responsive
- the search bar facets are now correctly truncated
- the button to open the list of dashboard is now at the same level
    as the sahre button

closes odoo/odoo#227498

Task: 4996784
Related: odoo/enterprise#94928

--- a/addons/spreadsheet/static/src/global_filters/components/filter_values_list/filter_values_list.scss
+++ b/addons/spreadsheet/static/src/global_filters/components/filter_values_list/filter_values_list.scss
@@ -6,3 +6,11 @@
         height: 36px;
     }
 }
+
+.o_bottom_sheet .o-filter-values {
+    min-width: unset;
+    .o-filter-item  .o-autocomplete .dropdown-item {
+        --dropdown-item-padding-y: 3px;
+        font-weight: 400;
+    }
+}
